<resources>
    <string name="app_name">Buzz Movies</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="api_login_route">"/user/login"</string>
    <string name="api_register_route">"/user/register"</string>
    <string name="api_profile_route">"/user"</string>
    
    
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="logout_button_text">Logout</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_button">Profile</string>

    <!-- Strings related to Profile Page -->
    <string name="email_profile_page">Email will go here</string>
    <string name="major_profile_page">Major</string>
    <string name="interests">Movie Interests</string>
    <string name="return_button">Save Changes</string>
    <string name="changePass_profile_page">Change Password</string>
    <string name="change_password_button_text">Confirm Password Change</string>


    <!-- Strings related to the API -->
    <string name="api_base_url">"https://buzzmovies.str.at/api"</string>
    <string name="network_error_try">Check your network connection and try again</string>

    <!-- Strings related to Search -->
    <string name="search_hint">Search Title</string>
    <string name="settings_description">Movies</string>
    <!-- String for search bar -->
    <string name="search_title">Search</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_movie_screen">movieScreen</string>

    <!-- String for movie Screen -->
    <string name="reviewItButton">Rate it!</string>
    <string name="rateMovieTextView">Rate this movie</string>

    <!-- String for review movie -->
    <string name="title_activity_review">Review Movie</string>

    <!-- String for account controller -->
    <string name="admin_tag">Admin</string>

    <!-- Strings for Admin Page -->
    <string name="title_activity_admin">Banned Accounts</string>

    <!-- Strings for Home Screen -->
    <string name="recommendation_button">Get Recommendation</string>


    <string name="api_get_accounts_route">/account</string>
    <string name="api_get_majors_route">/majors</string>


    <!-- String for Review Controller -->
    <string name="api_review_route">/rating</string>
    <string name="review_saved">Review saved</string>


</resources>
